code/typescript/GlobalFilings/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Global Filings client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v2.2.1-blue)](https://developer.factset.com/api-catalog/global-filings-api)
[![npm](https://img.shields.io/badge/npm-v4.0.0-orange)](https://www.npmjs.com/package/@factset/sdk-globalfilings/v/4.0.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)


The Filings API provides a comprehensive set of functionalities for searching and retrieving filing documents from various sources.

This API is designed to expose document search and document retrieval functionality. A document search will allow a request to query FactSet document databases based on certain search criteria specified in the request.

In addition, a document count request will provide information on the number of stories available for a particular security.

The meta endpoints, such as sources, formTypes, timeZones, and categories, provide comprehensive lists of available sources, form types, time zones, and categories, respectively.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.2.1
- SDK version: 4.0.0
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-globalfilings@4.0.0
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-globalfilings@4.0.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, FilingsAPIApi } = require('@factset/sdk-globalfilings');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new FilingsAPIApi();
const sources = ["EDG"]; // [String] | Code for document source to include.This is a comma-separated list. Use the `/meta/sources` endpoint to get the list of available sources.  
const opts = {
  'startDate': 20240601, // String | Start Date. Format is YYYYMMDD or relative +/- days (0,-1,etc). 
  'endDate': 20241101, // String | End Date. Format is YYYYMMDD or relative +/- days (0,-1,etc).
  'ids': ["MODN-US"], // [String] | Requested symbols or securities.  This is a comma-separated list with a maximum limit of 1000.  Each symbol can be a FactSet exchange symbol,mCUSIP, SEDOL, ISIN, or Entity ID > **Note**: If this parameter is not used should return null for the requestId field in the response
  'timeZone': "'America/New_York'", // String | timeZone to return story dates and times.Time zones, represented in POSIX format, are automatically adjusted for daylight savings. timeZone names are sourced from the IANA timezone registry.
  'categories': ["CN:US"], // [String] | Code for categories to include.  This is a comma-separated list. Use the `/meta/categories` endpoint to get the list of available categories.  Default = All categories.
  'primaryId': false, // Boolean | Type of identifier search * true - Returns headlines of stories that have the searched identifier(s) as the primary  identifier. * false - Returns headlines of stories that mentioned or referred to the  identifier.
  'searchText': Officer, // String | Restricts the search to include only document stories that include the searched text. This parameter supports boolean operators as well.
  'formTypes': ["15-12G"] // [String] | The search to include any form types of given sources
};

// Call api endpoint
apiInstance.getCount(sources, opts).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-globalfilings');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/content/global-filings/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*globalfilings.FilingsAPIApi* | [**getCount**](docs/FilingsAPIApi.md#getCount) | **GET** /count | Returns the count of filings for specified source.
*globalfilings.FilingsAPIApi* | [**getFilings**](docs/FilingsAPIApi.md#getFilings) | **GET** /search | Returns the filings documents and related metadata within FactSet coverage.
*globalfilings.MetaApi* | [**getFormtype**](docs/MetaApi.md#getFormtype) | **GET** /meta/form-types | Returns the form types of specified sources.
*globalfilings.MetaApi* | [**getSources**](docs/MetaApi.md#getSources) | **GET** /meta/sources | Returns the sources.
*globalfilings.MetaApi* | [**getTimezone**](docs/MetaApi.md#getTimezone) | **GET** /meta/time-zones | Returns the time zones.
*globalfilings.MetaApi* | [**getcategories**](docs/MetaApi.md#getcategories) | **GET** /meta/categories | Returns the categories.


## Documentation for Models

 - [globalfilings.Category](docs/Category.md)
 - [globalfilings.CategoryResponse](docs/CategoryResponse.md)
 - [globalfilings.Count](docs/Count.md)
 - [globalfilings.CountResponse](docs/CountResponse.md)
 - [globalfilings.Document](docs/Document.md)
 - [globalfilings.ErrorObject](docs/ErrorObject.md)
 - [globalfilings.ErrorResponse](docs/ErrorResponse.md)
 - [globalfilings.FormType](docs/FormType.md)
 - [globalfilings.FormTypeResponse](docs/FormTypeResponse.md)
 - [globalfilings.InvalidIdErrorObject](docs/InvalidIdErrorObject.md)
 - [globalfilings.SearchResponse](docs/SearchResponse.md)
 - [globalfilings.SearchResponseMeta](docs/SearchResponseMeta.md)
 - [globalfilings.SearchResponseMetaPagination](docs/SearchResponseMetaPagination.md)
 - [globalfilings.SearchResult](docs/SearchResult.md)
 - [globalfilings.Source](docs/Source.md)
 - [globalfilings.SourceResponse](docs/SourceResponse.md)
 - [globalfilings.TimeZone](docs/TimeZone.md)
 - [globalfilings.TimeZoneResponse](docs/TimeZoneResponse.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
